# This file makes the project PEP 518 compliant and provides explicit build instructions.
[build-system]
requires = [
    "setuptools>=61.0",
    "cython>=0.29"
]
build-backend = "setuptools.build_meta"

[project]
name = "vecalign"
version = "0.1.0" # This is a placeholder version

# This new section tells setuptools exactly what to package.
[tool.setuptools]
py-modules = ["vecalign"]
