# This file makes the project PEP 518 compliant and provides correct build instructions.
[build-system]
requires = [
    "setuptools>=61.0",
    "cython>=0.29"
]
build-backend = "setuptools.build_meta"

[project]
name = "vecalign"
version = "0.1.1" # Incremented version for clarity

# This section now tells setuptools to automatically find all packages.
[tool.setuptools.packages.find]
where = ["."] # Searches in the root directory
